# CBI-HBS-Summary

./: app.py  draft.py  pyproject.toml  sci_hbs.py
.github/workflows/: deploy.yaml
Data/: available_tables.csv  index.csv
Data/CSV_Files/1380/: جدول_شماره_۰۲-درصد_تغییر_متوسط_هزینه_ناخالص_سالانه_یک_خانوار_به_تفکیک_گروه_های_مختلف_هزینه.csv  جدول_شماره_۰۳-متوسط_هزینه_خالص_سالانه_یک_خانوار_به_تفکیک_گروه_های_مختلف_هزینه.csv  جدول_شماره_۰۵-متوسط_هزینه_ناخالص_سالانه_زیرگروه_های_خوراکی_ها،_آشامیدنی_ها_و_دخانیات.csv  جدول_شماره_۰۶-متوسط_مقدار_مصرف_سالانه_برخی_اقلام_خوراکی_ها،_آشامیدنی_ها_و_دخانیات_یک_خانوار.csv  جدول_شماره_۰۷-متوسط_هزینه_ناخالص_سالانه_زیرگروه_های_غیرخوراکی.csv  جدول_شماره_۰۸-متوسط_درآمد_ناخالص_سالانه_یک_خانوار_و_سهم_گروه_های_مختلف_درآمد.csv  جدول_شماره_۱-متوسط_هزینه_ی_ناخالص_سالانه_یک_خانوار_به_تفکیک_گروه_های_مختلف_هزینه.csv  جدول_شماره_۱۰-متوسط_درآمد_خالص_سالانه_یک_خانوار_و_سهم_گروه_های_مختلف_درآمد.csv  جدول_شماره_۱۱-درصد_تغییر_متوسط_درآمد_خالص_سالانه_یک_خانوار_به_تفکیک_گروه_های_مختلف_درآمد.csv  (+19 more)
Data/Cleaned_Tables/: annual_consumption_quantity_food_beverages_tobacco.csv  annual_gross_expenditure_by_group.csv  annual_gross_expenditure_by_group_normalized.csv  annual_gross_expenditure_by_group_normalized_share.csv  employment_status_6_plus.csv  household_appliances_access.csv  household_distribution_by_members.csv  household_distribution_by_number_of_employed.csv  household_facilities_access.csv  household_size.csv  housing_rooms.csv
config/: hbsir_settings.yaml
layouts/: app.grid.json
src/cbi_hbs_summary/: __init__.py  utils.py
(+187 files in other folders)
