[project]
name = "cbi-hbs-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.16.0",
    "hbsir>=0.6.6",
    "marimo[recommended]>=0.17.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.9",
]

[project.urls]
Homepage = "https://github.com/Sakoo-Foundation/CBI-HBS-Summary"
Repository = "https://github.com/Sakoo-Foundation/CBI-HBS-Summary"

[tool.uv]
package = true

[tool.uv.workspace]
members = [
  ".",
]

[tool.uv.sources]
cbi-hbs-summary = { workspace = true, editable = true }

[dependency-groups]
dev = [
  "cbi-hbs-summary",
  "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cbi_hbs_summary = ["**/*.yaml", "**/*.csv"]
